[Feature] introduce v1 trino-first audit pipeline with layered readers